# AlignAI

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: Home.py  recommendation_ui.py
app/pages/: 1_Dataset_Management.py  2_Experiment_Tracking.py  3_Fine_Tuning_Jobs.py  4_Evaluation_Center.py  5_Alignment_Dashboard.py  6_Leaderboards.py  7_Human_Review_Center.py  8_Reports.py
data/: alignment_dataset.sql
data/samples/: enterprise_support_dataset.jsonl
docs/: alignment_score.md  architecture.md  deployment.md  evaluation_methodology.md  recommendation_engine.md
notebooks/: 01_finetuning_pipeline.ipynb  02_evaluation_pipeline.ipynb  sql_analysis.ipynb
scripts/: analyze_dataset.py  run_evaluation.py  run_finetune.py
src/alignai/: __init__.py  config.py  cost.py  hardware.py  logging_utils.py
src/alignai/alignment/: __init__.py  readiness.py  scoring.py
src/alignai/datasets_analysis/: __init__.py  analyzer.py
src/alignai/evaluation/: __init__.py  confidence.py  judge.py  metrics.py  reports.py  rubrics.py
src/alignai/experiments/: __init__.py  leaderboard.py  recommendation.py  registry.py
src/alignai/models/: __init__.py  generation.py  loaders.py
src/alignai/preference/: __init__.py  collector.py
src/alignai/rag/: __init__.py  augment.py  (+2 more)
tests/: test_code_alignment.py  test_core.py  test_dataset_analyzer.py  test_distributed_training.py  test_experiments.py  test_preference.py  test_rag.py  test_recommendation.py  test_reports.py
(+8 files in other folders)
