[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alignai"
version = "1.0.0"
description = "LLM Fine-Tuning, Evaluation & Alignment Platform"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Nitin Reddy Bommidi" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "bitsandbytes>=0.43.0",
    "openai>=1.14.0",
    "streamlit>=1.32.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.1.0", "ruff>=0.3.0"]

[project.scripts]
alignai-finetune = "scripts.run_finetune:main"
alignai-evaluate = "scripts.run_evaluation:main"
alignai-analyze = "scripts.analyze_dataset:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
